Fix applaud align

--- a/portal/src/components/Materials/Materials.component.less
+++ b/portal/src/components/Materials/Materials.component.less
@@ -163,15 +163,11 @@
       height: 25px;
       border-radius: 4px;
       color: #fff;
-      display: inline-flex;
-      font-family: @second-font;
       font-size: 16px;
       font-weight: bold;
-      font-style: normal;
-      font-stretch: normal;
-      line-height: 22px;
       min-width: 58px;
       padding-left: 23px;
+      font-size: 1.1em;
     }
 
     &_external_link {
